--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "threads"
+name = "raptor"
 version = "0.1.0"
 description = "Thread detector for the threads (name subject to change) app"
 authors = ["poweroutlet2, turboismo, HP"]
@@ -12,7 +12,7 @@ SQLAlchemy = "^2.0.1"
 psycopg2-binary = "^2.9.3"
 python-dotenv = "^0.21.0"
 sqlacodegen = "^2.3.0"
-snscrape = {git = "https://github.com/poweroutlet2/snscrape.git", develop=true}
+snscrape = {git = "https://github.com/poweroutlet2/snscrape.git"}
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.16.0"
