--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ SQLAlchemy = "^2.0.1"
 psycopg2-binary = "^2.9.3"
 python-dotenv = "^0.21.0"
 sqlacodegen = "^2.3.0"
-snscrape = {git = "https://github.com/poweroutlet2/snscrape-po2.git#po2-v2"}
+snscrape = {git = "https://github.com/poweroutlet2/snscrape-po2.git"}
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.16.0"
